--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/static/CSS/style2.css" />
+    <link rel="stylesheet" href="/Blackjack-Game/style.css" />
   </head>
 
   <body>
@@ -63,6 +63,6 @@
       </div>
     </div>
 
-    <script src="static/Js/blackjack.js"></script>
+    <script src="/Blackjack-Game/blackjack.js"></script>
   </body>
 </html>
