New style and logic base

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/Blackjack-Game/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -26,7 +26,7 @@
 
       <div class="container-2">
         <div class="flex-container-bet" id="bkj-apuesta">
-          <h3>here goes the bet</h3>
+          <h3>Bet</h3>
         </div>
       </div>
 
@@ -63,6 +63,6 @@
       </div>
     </div>
 
-    <script src="/Blackjack-Game/blackjack.js"></script>
+    <script src="./blackjack.js"></script>
   </body>
 </html>
