--- a/index-copy.html
+++ b/index-copy.html
@@ -12,13 +12,23 @@
         <h1>Blackjack</h1>
       </div>
       <div class="game__box">
-        <div class="game__box-table">This is the table</div>
+        <div class="game__box-table">
+          <div class="game__box-table-cards">
+            <div class="card red" id="card-game" data-value="9"></div>
+            <div
+              class="game__box-cards-dealer"
+              id="game__box-cards-dealer"
+            ></div>
+            <div
+              class="game__box-cards-player"
+              id="game__box-cards-player"
+            ></div>
+          </div>
+        </div>
       </div>
       <div class="game__buttons">
         <input class="game__buttons-input" type="text" />
-        <button class="game__buttons-button" onclick="playGame()" id="bet">
-          Bet
-        </button>
+        <button class="game__buttons-button" id="bet">Bet</button>
         <button class="game__buttons-button" id="play">Play</button>
         <button class="game__buttons-button" id="stand">Stand</button>
         <button class="game__buttons-button" id="hit">Hit</button>
@@ -32,3 +42,14 @@
     <script src="./script.js" type="module"></script>
   </body>
 </html>
+
+<!--Notas en Desarrollo
+
+> fix card
+> finish styling card
+> fixed cards element
+> show a series of cards
+> animate showing cards
+> make the game script
+
+-->
