--- a/index-copy.html
+++ b/index-copy.html
@@ -14,24 +14,23 @@
       <div class="game__box">
         <div class="game__box-table">
           <div class="game__box-table-cards">
-            <div class="card red" id="card-game" data-value="9"></div>
-            <div
-              class="game__box-cards-dealer"
-              id="game__box-cards-dealer"
-            ></div>
-            <div
-              class="game__box-cards-player"
-              id="game__box-cards-player"
-            ></div>
+            <div class="game__box-cards-dealer" id="game__box-dealer"></div>
+            <div class="game__box-points-dealer">
+              Dealer: <span id="dealer-result">0</span>
+            </div>
+            <div class="game__box-cards-player" id="game__box-player"></div>
+            <div class="game__box-points-player">
+              You: <span id="player-result">0</span>
+            </div>
           </div>
         </div>
       </div>
       <div class="game__buttons">
         <input class="game__buttons-input" type="text" />
         <button class="game__buttons-button" id="bet">Bet</button>
-        <button class="game__buttons-button" id="play">Play</button>
-        <button class="game__buttons-button" id="stand">Stand</button>
-        <button class="game__buttons-button" id="hit">Hit</button>
+        <button class="game__buttons-button" id="deal-button">deal</button>
+        <button class="game__buttons-button" id="stand-button">Stand</button>
+        <button class="game__buttons-button" id="hit-button">Hit</button>
       </div>
       <div class="game__stats">
         <h3>Balance: <b>$</b><span id="game-money">1000</span></h3>
@@ -39,7 +38,7 @@
         <h3><a href="#">History</a></h3>
       </div>
     </div>
-    <script src="./script.js" type="module"></script>
+    <script src="./blackjack.js"></script>
   </body>
 </html>
 
