--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Blackjack Game</title>
-    <link rel="stylesheet" href="./style-copy.css" />
+    <link rel="stylesheet" href="./style.css" />
     <meta />
   </head>
   <body>
@@ -26,15 +26,20 @@
         </div>
       </div>
       <div class="game__buttons">
-        <input class="game__buttons-input" type="text" />
-        <button class="game__buttons-button" id="bet">Bet</button>
+        <input
+          class="game__buttons-input"
+          type="number"
+          id="bet-input"
+          value="2"
+        />
+        <button class="game__buttons-button" id="bet-button">Bet</button>
         <button class="game__buttons-button" id="deal-button">deal</button>
         <button class="game__buttons-button" id="stand-button">Stand</button>
         <button class="game__buttons-button" id="hit-button">Hit</button>
       </div>
       <div class="game__stats">
         <h3>Balance: <b>$</b><span id="game-money">1000</span></h3>
-        <h3>Win streak: <span id="game-strek">2</span></h3>
+        <h3>Win streak: <span id="game-streak">0</span></h3>
         <h3><a href="#">History</a></h3>
       </div>
     </div>
@@ -44,11 +49,8 @@
 
 <!--Notas en Desarrollo
 
-> fix card
-> finish styling card
-> fixed cards element
-> show a series of cards
+> fix cards position in player box
+> fix game__box-points boxes 
 > animate showing cards
-> make the game script
 
 -->
