minor changes on stats/buttons/cards

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Blackjack Game</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="#" />
     <meta />
   </head>
   <body>
@@ -30,10 +31,10 @@
           class="game__buttons-input"
           type="number"
           id="bet-input"
-          value="2"
+          value="100"
         />
         <button class="game__buttons-button" id="bet-button">Bet</button>
-        <button class="game__buttons-button" id="deal-button">deal</button>
+        <button class="game__buttons-button" id="deal-button">Deal</button>
         <button class="game__buttons-button" id="stand-button">Stand</button>
         <button class="game__buttons-button" id="hit-button">Hit</button>
       </div>
@@ -41,6 +42,8 @@
         <h3>Balance: <b>$</b><span id="game-money">1000</span></h3>
         <h3>Win streak: <span id="game-streak">0</span></h3>
         <h3><a href="#">History</a></h3>
+        <h3><a href="#">Rules</a></h3>
+        <h3><a href="#">Login</a></h3>
       </div>
     </div>
     <script src="./blackjack.js"></script>
