fixed problem of As card

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3><a href="#">Login</a></h3>
       </div>
     </div>
-    <script src="./blackjack.js"></script>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
 
