--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Blackjack Game</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
     <link rel="shortcut icon" href="#" />
     <meta />
   </head>
@@ -42,11 +42,11 @@
         <h3>Balance: <b>$</b><span id="game-money">1000</span></h3>
         <h3>Win streak: <span id="game-streak">0</span></h3>
         <h3><a href="#">History</a></h3>
-        <h3><a href="#">Rules</a></h3>
+        <h3><a href="./rules.html">Rules</a></h3>
         <h3><a href="#">Login</a></h3>
       </div>
     </div>
-    <script src="./script.js" type="module"></script>
+    <script src="./src/js/script.js" type="module"></script>
   </body>
 </html>
 
