fixed back button

--- a/rules.html
+++ b/rules.html
@@ -55,6 +55,9 @@
         <li>Knowing the rules you can choose to stand with the "Stand" button or hit another card with the "Hit" button</li>
         <li>To play again simply repeat the process..</li>
       </ol>
-    <button class="back-button"><a href="./index.html">Back</a></button>
+
+      <form action="./index.html">
+        <input type="submit" value="Back">
+      </form>
   </body>
 </html>
